--- a/paper.bib
+++ b/paper.bib
@@ -24,3 +24,15 @@
     month = {Oct}, 
     pages = {61-74.e2} 
 }
+
+@misc{FSLeyes, 
+    author = {McCarthy, Paul}, 
+    title = {FSLeyes}, 
+    year = {2020}, 
+    month = {Jul} 
+    publisher = {Zenodo}, 
+    journal = {GitLab repository}
+    url = {https://zenodo.org/record/3937147}, 
+    DOI = {10.5281/ZENODO.3937147}, 
+    abstractNote = {FSLeyes is the FSL image viewer, a wxPython application for visualising neuroimaging data. FSLeyes is developed at the Wellcome Centre for Integrative Neuroimaging (FMRIB), at the University of Oxford. It is hosted at https://git.fmrib.ox.ac.uk/fsl/fsleyes/fsleyes/.}, 
+}
